# hello-asm

./: CMakeLists.txt  README.md
src/asm/: hello.asm
